# sample-gnome-lib

./: INSTALL.txt  meson.build
src/: Foo.vala  config.in.vala  meson.build
